--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>My 3 favorite foods</h1>
 
-    <a href="recipes/shaorma.html">Shaorma cu de toate</a>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzm4PS1amIOYrFH74z0hp9ITy2R3-d56ziIg&usqp=CAU" alt="Cook approving" width="200" height="300">
+    <img src="https://assets.bonappetit.com/photos/5f3bffa3b62c45d85d5245df/16:9/w_2560%2Cc_limit/Stop-Cooking-Like-a-Chef-Meherwan-Irani.jpg" alt="another cook" width="500" height="300">
+    <h2>Can't make a top 3 because I can't decide. :)</h2>
+    <ul>
+        <li><a href="recipes/shaorma.html">Shaorma cu de toate</a></li>
+        <li><a href="recipes/sarmale.html">Traditional Romanian Sarmale</a></li>
+        <li><a href="recipes/cozonac.html">Cozonac with rahat and nuts</a></li>
+    </ul>
+
+    <p>Note: Translation may not be correct!!:) (translated from romanian)</p>
 </body>
 </html>
